# vocord

./: .gitignore  README.md  index.tsx  install.ps1  install.sh  native.ts
transcribe-cli/: Cargo.toml  README.md
transcribe-cli/src/: main.rs
