[package]
name = "transcribe-cli"
version = "0.1.0"
edition = "2021"
description = "CLI wrapper around transcribe-rs whisper engine for voice message transcription"

[dependencies]
transcribe-rs = { git = "https://github.com/cjpais/transcribe-rs.git", features = ["whisper"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
