[package]
name = "transcribe-cli"
version = "0.2.0"
edition = "2021"
description = "CLI wrapper around transcribe-rs parakeet engine for voice message transcription"

[dependencies]
transcribe-rs = { git = "https://github.com/cjpais/transcribe-rs.git", features = ["parakeet"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
